LFXV2-8: calendar and project id attributes
- adding calendar settings
- project_id format as uid
