# gen/http/openapi3.yaml
@@ -33,6 +33,8 @@ paths:
                             $ref: '#/components/schemas/CreateCommitteeRequestBody'
                         example:
                             business_email_required: false
+                            calendar:
+                                public: true
                             category: Technical Steering Committee
                             description: Main technical oversight committee for the project
                             enable_voting: true
@@ -55,6 +57,8 @@ paths:
                                 $ref: '#/components/schemas/Committee'
                             example:
                                 business_email_required: false
+                                calendar:
+                                    public: true
                                 category: Technical Steering Committee
                                 description: Main technical oversight committee for the project
                                 enable_voting: true
@@ -62,7 +66,7 @@ paths:
                                 is_audit_enabled: false
                                 name: Technical Steering Committee
                                 parent_committee_id: 90b147f2-7cdd-157a-a2f4-9d4a567123fc
-                                project_id: a0956000001FwZVAA0
+                                project_id: 7cad5a8d-19d0-41a4-81a6-043453daf9ee
                                 public: true
                                 public_name: TSC Committee Calendar
                                 sso_group_enabled: true
@@ -224,6 +228,8 @@ paths:
                                 $ref: '#/components/schemas/Committee'
                             example:
                                 business_email_required: false
+                                calendar:
+                                    public: true
                                 category: Technical Steering Committee
                                 description: Main technical oversight committee for the project
                                 enable_voting: true
@@ -231,7 +237,7 @@ paths:
                                 is_audit_enabled: false
                                 name: Technical Steering Committee
                                 parent_committee_id: 90b147f2-7cdd-157a-a2f4-9d4a567123fc
-                                project_id: a0956000001FwZVAA0
+                                project_id: 7cad5a8d-19d0-41a4-81a6-043453daf9ee
                                 public: true
                                 public_name: TSC Committee Calendar
                                 sso_group_enabled: true
@@ -310,13 +316,15 @@ paths:
                             $ref: '#/components/schemas/UpdateCommitteeRequestBody'
                         example:
                             business_email_required: false
+                            calendar:
+                                public: true
                             category: Technical Steering Committee
                             description: Main technical oversight committee for the project
                             enable_voting: true
                             is_audit_enabled: false
                             name: Technical Steering Committee
                             parent_committee_id: 90b147f2-7cdd-157a-a2f4-9d4a567123fc
-                            project_id: a0956000001FwZVAA0
+                            project_id: 7cad5a8d-19d0-41a4-81a6-043453daf9ee
                             public: true
                             public_name: TSC Committee Calendar
                             sso_group_enabled: true
@@ -333,6 +341,8 @@ paths:
                                 $ref: '#/components/schemas/Committee'
                             example:
                                 business_email_required: false
+                                calendar:
+                                    public: true
                                 category: Technical Steering Committee
                                 description: Main technical oversight committee for the project
                                 enable_voting: true
@@ -340,7 +350,7 @@ paths:
                                 is_audit_enabled: false
                                 name: Technical Steering Committee
                                 parent_committee_id: 90b147f2-7cdd-157a-a2f4-9d4a567123fc
-                                project_id: a0956000001FwZVAA0
+                                project_id: 7cad5a8d-19d0-41a4-81a6-043453daf9ee
                                 public: true
                                 public_name: TSC Committee Calendar
                                 sso_group_enabled: true
@@ -454,6 +464,17 @@ components:
                     description: Whether business email is required for committee members
                     default: false
                     example: false
+                calendar:
+                    type: object
+                    properties:
+                        public:
+                            type: boolean
+                            description: Whether the committee calendar is publicly visible
+                            default: false
+                            example: true
+                    description: Settings related to the committee calendar
+                    example:
+                        public: true
                 category:
                     type: string
                     description: The category of the committee
@@ -510,17 +531,19 @@ components:
                     format: uuid
                 project_id:
                     type: string
-                    description: The project identifier this committee belongs to
-                    example: a0956000001FwZVAA0
+                    description: The project identifier this committee belongs to -- v2 id, not related to v1 id directly
+                    example: 7cad5a8d-19d0-41a4-81a6-043453daf9ee
+                    format: uuid
                 public:
                     type: boolean
-                    description: Whether the committee is publicly visible
+                    description: General committee visibility/access permissions
                     default: false
                     example: true
                 public_name:
                     type: string
                     description: The public display name of the committee
                     example: TSC Committee Calendar
+                    maxLength: 100
                 sso_group_enabled:
                     type: boolean
                     description: Whether SSO group integration is enabled
@@ -544,6 +567,8 @@ components:
             description: A representation of LFX committee
             example:
                 business_email_required: false
+                calendar:
+                    public: true
                 category: Technical Steering Committee
                 description: Main technical oversight committee for the project
                 enable_voting: true
@@ -551,7 +576,7 @@ components:
                 is_audit_enabled: false
                 name: Technical Steering Committee
                 parent_committee_id: 90b147f2-7cdd-157a-a2f4-9d4a567123fc
-                project_id: a0956000001FwZVAA0
+                project_id: 7cad5a8d-19d0-41a4-81a6-043453daf9ee
                 public: true
                 public_name: TSC Committee Calendar
                 sso_group_enabled: true
@@ -578,6 +603,17 @@ components:
                     description: Whether business email is required for committee members
                     default: false
                     example: false
+                calendar:
+                    type: object
+                    properties:
+                        public:
+                            type: boolean
+                            description: Whether the committee calendar is publicly visible
+                            default: false
+                            example: true
+                    description: Settings related to the committee calendar
+                    example:
+                        public: true
                 category:
                     type: string
                     description: The category of the committee
@@ -629,13 +665,14 @@ components:
                     format: uuid
                 public:
                     type: boolean
-                    description: Whether the committee is publicly visible
+                    description: General committee visibility/access permissions
                     default: false
                     example: true
                 public_name:
                     type: string
                     description: The public display name of the committee
                     example: TSC Committee Calendar
+                    maxLength: 100
                 sso_group_enabled:
                     type: boolean
                     description: Whether SSO group integration is enabled
@@ -658,6 +695,8 @@ components:
                         - manager_user_id2
             example:
                 business_email_required: false
+                calendar:
+                    public: true
                 category: Technical Steering Committee
                 description: Main technical oversight committee for the project
                 enable_voting: true
@@ -715,6 +754,17 @@ components:
                     description: Whether business email is required for committee members
                     default: false
                     example: false
+                calendar:
+                    type: object
+                    properties:
+                        public:
+                            type: boolean
+                            description: Whether the committee calendar is publicly visible
+                            default: false
+                            example: true
+                    description: Settings related to the committee calendar
+                    example:
+                        public: true
                 category:
                     type: string
                     description: The category of the committee
@@ -766,17 +816,19 @@ components:
                     format: uuid
                 project_id:
                     type: string
-                    description: The project identifier this committee belongs to
-                    example: a0956000001FwZVAA0
+                    description: The project identifier this committee belongs to -- v2 id, not related to v1 id directly
+                    example: 7cad5a8d-19d0-41a4-81a6-043453daf9ee
+                    format: uuid
                 public:
                     type: boolean
-                    description: Whether the committee is publicly visible
+                    description: General committee visibility/access permissions
                     default: false
                     example: true
                 public_name:
                     type: string
                     description: The public display name of the committee
                     example: TSC Committee Calendar
+                    maxLength: 100
                 sso_group_enabled:
                     type: boolean
                     description: Whether SSO group integration is enabled
@@ -799,13 +851,15 @@ components:
                         - manager_user_id2
             example:
                 business_email_required: false
+                calendar:
+                    public: true
                 category: Technical Steering Committee
                 description: Main technical oversight committee for the project
                 enable_voting: true
                 is_audit_enabled: false
                 name: Technical Steering Committee
                 parent_committee_id: 90b147f2-7cdd-157a-a2f4-9d4a567123fc
-                project_id: a0956000001FwZVAA0
+                project_id: 7cad5a8d-19d0-41a4-81a6-043453daf9ee
                 public: true
                 public_name: TSC Committee Calendar
                 sso_group_enabled: true
